# compose-farm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  PR_REVIEW.md  README.md  TEST_PLAN.md  agent-cli  bootstrap.sh  compose-farm.example.yaml  docker-compose.yml  entrypoint.sh  hatch_build.py  justfile  pyproject.toml  sdc.example.yaml  shell.nix  zensical.toml
.github/: check_readme_commands.py
.github/workflows/: ci.yml  docker.yml  docs.yml  update-readme.yml
.prompts/: docs-review.md  pr-review.md  update-demos.md
docs/: REVIEW_PROMPT.md  SAFARI_VIDEO_FIX.md  architecture.md  best-practices.md  commands.md  configuration.md  docker-deployment.md  getting-started.md  index.md  live-stats-perf-report.md  reddit-post.md  traefik.md  web-ui.md
docs/assets/: apply.webm  compose.webm  config-example.webm  install.webm  logs.webm  migration.webm  quickstart.webm  update.webm  web-console.webm  web-live_stats.webm  web-navigation.webm  web-shell.webm  web-stack.webm  web-themes.webm  web-workflow.webm
docs/demos/: README.md  quickstart.tape  record.sh  update.tape
docs/demos/cli/: README.md  compose.tape  config-example.tape  logs.tape  migration.tape  record.py  record.sh  shell.tape  update.tape
docs/demos/web/: README.md  conftest.py  demo_live_stats.py  demo_navigation.py  demo_service.py  demo_shell.py  demo_themes.py  demo_workflow.py  record.py  record_live_stats_standalone.py
docs/javascripts/: video-fix.js
examples/: README.md  compose-farm-state.yaml  compose-farm.yaml  sdc.yaml
examples/coredns/: .env
examples/hello/: docker-compose.yml
examples/mealie/: compose.yaml
examples/nginx/: docker-compose.yml
examples/paperless-ngx/: .env  compose.yaml
examples/traefik/: compose.yaml  docker-compose.yml
examples/traefik/dynamic.d/: compose-farm.yml
examples/uptime-kuma/: compose.yaml
examples/whoami/: docker-compose.yml
src/compose_farm/: __init__.py  cli.py  compose.py  config.py  config_cmd.py  console.py  example-config.yaml  executor.py  glances.py  logs.py  operations.py  paths.py  registry.py  ssh.py  ssh_keys.py  state.py  traefik.py
src/compose_farm/cli/: __init__.py  app.py  common.py  config.py  lifecycle.py  management.py  monitoring.py  ssh.py  web.py
src/compose_farm/examples/: __init__.py
src/compose_farm/examples/full/: README.md  compose-farm.yaml
src/compose_farm/examples/full/nginx/: .env  compose.yaml
src/compose_farm/examples/full/postgres/: .env  compose.yaml
src/compose_farm/examples/nginx/: compose.yaml
src/compose_farm/examples/postgres/: compose.yaml
src/compose_farm/examples/whoami/: .env  compose.yaml
src/compose_farm/web/: app.py  cdn.py  deps.py  streaming.py  vendor-assets.json  ws.py
src/compose_farm/web/routes/: actions.py  api.py  containers.py  pages.py
src/compose_farm/web/static/: app.css  app.js
src/compose_farm/web/templates/: base.html  config.html  console.html  containers.html  index.html  service.html  stack.html  state.html  stats.html
src/sdc/: __init__.py  cli.py  config.py  ssh.py
tests/: test_cli_common.py  test_cli_lifecycle.py  test_cli_logs.py  test_cli_management.py  test_cli_monitoring.py  test_cli_ssh.py  test_cli_startup.py  test_cli_web.py  test_compose.py  test_config.py  test_config_cmd.py  test_console.py  test_containers.py  test_executor.py  test_glances.py  test_logs.py  test_operations.py  test_refresh.py  test_registry.py  test_ssh.py  test_ssh_keys.py  test_state.py  test_sync.py  test_traefik.py
tests/web/: conftest.py  test_backup.py  test_helpers.py  test_htmx_browser.py  test_template_context.py  test_ws.py
(+16 files in other folders)
