[project]
name = "sdc"
version = "0.1.0"
description = "Simple Distributed Compose - run docker compose commands across hosts"
readme = "README.md"
authors = [
    { name = "Bas Nijholt", email = "bas@nijho.lt" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "asyncssh>=2.14.0",
    "pyyaml>=6.0",
]

[project.scripts]
sdc = "sdc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdc"]
