[project]
name = "sdc"
version = "0.1.0"
description = "Simple Distributed Compose - run docker compose commands across hosts"
readme = "README.md"
authors = [
    { name = "Bas Nijholt", email = "bas@nijho.lt" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "asyncssh>=2.14.0",
    "pyyaml>=6.0",
]

[project.scripts]
sdc = "sdc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdc"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle (too noisy for now)
    "ANN",     # flake8-annotations (using mypy instead)
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # single-line implicit string concat (conflicts with formatter)
    "FBT",     # boolean args are fine for CLI
    "T201",    # print needed for streaming output
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "S108"]  # allow assert, magic values, /tmp in tests

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "asyncssh.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.8",
    "types-pyyaml>=6.0.12.20250915",
]
